--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "sass": "^1.57.1",
+    "typescript": "4.9.4",
+    "xterm": "^5.1.0"
   }
 }
